[gd_scene load_steps=8 format=3 uid="uid://w2mi5vb30kyv"]

[ext_resource type="Script" path="res://main.gd" id="1_gmujt"]
[ext_resource type="Script" path="res://chalk/ChalkBoard.gd" id="3_elxl8"]
[ext_resource type="PackedScene" uid="uid://cc3fltjp24rja" path="res://scn/notebooks/notebook2.tscn" id="4_jlwh1"]
[ext_resource type="PackedScene" uid="uid://bnvw4go1f1qb1" path="res://testMini/mini_editormenu.tscn" id="4_s7obh"]
[ext_resource type="Texture2D" uid="uid://buv4fogvmvtue" path="res://assets/buttonMenu.png" id="5_al02g"]
[ext_resource type="Script" path="res://BottomUIArea.gd" id="7_cn8uq"]
[ext_resource type="PackedScene" uid="uid://cvr8vqtmaxym" path="res://testMini/character_body_2d.tscn" id="7_xo871"]

[node name="Main" type="Node"]
script = ExtResource("1_gmujt")

[node name="TransBG" type="Polygon2D" parent="."]
unique_name_in_owner = true
visible = false
color = Color(1, 0.847059, 1, 0.470588)
polygon = PackedVector2Array(-20, -24, -35, 1100, 1955, 1105, 1935, -19)

[node name="BottomUIArea" type="Sprite2D" parent="."]
position = Vector2(593, 1012)
texture = ExtResource("5_al02g")
script = ExtResource("7_cn8uq")

[node name="Panel" type="Panel" parent="BottomUIArea"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -110.0
offset_top = -65.0
offset_right = -110.0
offset_bottom = -65.0
grow_horizontal = 2
grow_vertical = 2

[node name="HSplitContainer" type="HSplitContainer" parent="BottomUIArea"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -110.0
offset_top = -65.0
offset_right = -110.0
offset_bottom = -65.0
grow_horizontal = 2
grow_vertical = 2
split_offset = 130
dragger_visibility = 2

[node name="MiniTuber" type="Button" parent="BottomUIArea/HSplitContainer"]
layout_mode = 2
toggle_mode = true
text = "MiniTuber"

[node name="VBoxContainer" type="VBoxContainer" parent="BottomUIArea/HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 8

[node name="BottomMove" type="Button" parent="BottomUIArea/HSplitContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
tooltip_text = "Click and drag here to reposition menu."
text = "user.ttv"

[node name="ChalkButton" type="CheckButton" parent="BottomUIArea/HSplitContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
tooltip_text = "LMB draws lines.
RMB clears the board.
Toggling Off clears the board."
text = "Chalk"
alignment = 1

[node name="NotesButton" type="CheckButton" parent="BottomUIArea/HSplitContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
text = "Notes"
alignment = 1

[node name="Settings" type="Button" parent="BottomUIArea/HSplitContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
text = "Settings"

[node name="MiniTuber" parent="BottomUIArea" instance=ExtResource("7_xo871")]
position = Vector2(-47, 0)

[node name="HomePos" type="Node2D" parent="BottomUIArea"]
unique_name_in_owner = true
position = Vector2(-46, 0)

[node name="NoteBook" parent="." instance=ExtResource("4_jlwh1")]
visible = false
position = Vector2(170, 488)

[node name="ChalkBoard" type="Node2D" parent="."]
script = ExtResource("3_elxl8")

[node name="ChalkLine" type="Node2D" parent="ChalkBoard"]

[node name="MiniEditor" parent="." instance=ExtResource("4_s7obh")]
visible = false

[connection signal="toggled" from="BottomUIArea/HSplitContainer/MiniTuber" to="BottomUIArea/MiniTuber" method="_on_mini_tuber_toggled"]
[connection signal="button_down" from="BottomUIArea/HSplitContainer/VBoxContainer/BottomMove" to="BottomUIArea" method="_on_bottom_move_button_down"]
[connection signal="button_up" from="BottomUIArea/HSplitContainer/VBoxContainer/BottomMove" to="BottomUIArea" method="_on_bottom_move_button_up"]
[connection signal="toggled" from="BottomUIArea/HSplitContainer/VBoxContainer/ChalkButton" to="ChalkBoard" method="_on_chalk_button_toggled"]
[connection signal="toggled" from="BottomUIArea/HSplitContainer/VBoxContainer/NotesButton" to="NoteBook" method="_on_notes_button_toggled"]
[connection signal="loadDialog" from="MiniEditor" to="BottomUIArea/MiniTuber" method="_on_mini_editor_load_dialog"]
